--- a/index.html
+++ b/index.html
@@ -6,18 +6,41 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-dev.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script defer src="js/script.js"></script>
+    <script defer src="js/main.js"></script>
 
     <link rel="shortcut icon" href="#">
 
     <title></title>
 </head>
 <body>
-...
+
+<!-- BEGIN LANDING -->
+<div class="landing">
+
+</div>
+<!-- END LANDING -->
+
+<!-- BEGIN CONTAINER-MAIN -->
+<div class="container-main">
+
+    <!-- BEGIN NAV -->
+    <div class="nav">
+
+        <div class="nav-ul">
+
+            <div id="nav-li-id-1-" class="nav-li"></div>
+            <div id="nav-li-id-2-" class="nav-li"></div>
+            <div id="nav-li-id-3-" class="nav-li"></div>
+        </div>
+
+    </div>
+    <!-- END NAV-->
+
+</div>
+<!-- END CONTAINER MAIN -->
 
 </body>
 </html>
