Added style-guide and wireframe

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 
         <div class="nav-ul">
 
-            <div id="nav-li-id-1-" class="nav-li"></div>
-            <div id="nav-li-id-2-" class="nav-li"></div>
-            <div id="nav-li-id-3-" class="nav-li"></div>
+            <div id="nav-li-id-1-dev" class="nav-li nav-li-left">dev</div>
+            <div id="nav-li-id-2-portfolio" class="nav-li nav-li-right">portfolio</div>
+            <div id="nav-li-id-3-contact" class="nav-li nav-li-right">contact</div>
+            <div id="nav-li-id-3-about" class="nav-li nav-li-right">about</div>
+
         </div>
 
     </div>
