--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
 
         </div>
 
+        <div class="container-about">
+
+        </div>
+
+        <div class="container-about-project">
+
+            <div class="ph-300x240"></div>
+            <div class="ph-300x240"></div>
+            <div class="ph-300x240"></div>
+
+        </div>
+
+
     </div>
     <!-- END NAV-->
 
