--- a/index.html
+++ b/index.html
@@ -17,45 +17,66 @@
 </head>
 <body>
 
-<!-- BEGIN LANDING -->
-<div class="landing">
-
-</div>
-<!-- END LANDING -->
-
 <!-- BEGIN CONTAINER-MAIN -->
 <div class="container-main">
 
-    <!-- BEGIN NAV -->
+    <!-- BEGIN NAV-->
     <div class="nav">
-
         <div class="nav-ul">
-
             <div id="nav-li-id-1-dev" class="nav-li nav-li-left">dev</div>
             <div id="nav-li-id-2-portfolio" class="nav-li nav-li-right">portfolio</div>
             <div id="nav-li-id-3-contact" class="nav-li nav-li-right">contact</div>
             <div id="nav-li-id-3-about" class="nav-li nav-li-right">about</div>
-
         </div>
+    </div>
 
-        <div class="container-about">
+    <div class="fixed-border-bottom"></div>
+    <!-- END NAV & FIXED-BORDER-BOTTOM  -->
 
+    <!-- BEGIN LANDING -->
+    <div class="landing flex-center-center">
+
+        <div class="ph-500x1000">landing</div>
+
+    </div>
+    <!-- END LANDING -->
+
+
+    <!-- BEGIN CONTAINER-ABOUT -->
+    <div class="container-about">
+
+        <div class="container-about-info flex-center-center">
+            <div class="ph-300x1000">about / info</div>
         </div>
 
         <div class="container-about-project">
-
-            <div class="ph-300x240"></div>
-            <div class="ph-300x240"></div>
-            <div class="ph-300x240"></div>
-
+            <div class="ph-300x240">project 1 preview</div>
+            <div class="ph-300x240">project 2 preview</div>
+            <div class="ph-300x240">project 3 preview</div>
         </div>
 
+    </div>
+    <!-- END CONTAINER-ABOUT -->
+
+    <!-- BEGIN CONTAINER-PROJECTS X3 -->
+    <div class="container-projects">
+        <div class="container-project flex-center-center">
+            <div class="ph-500x1000">project 1 detail / link</div>
+        </div>
+
+        <div class="container-project flex-center-center ph-container-project">
+            <div class="ph-500x1000">project 2 detail / link</div>
+        </div>
+
+        <div class="container-project flex-center-center">
+            <div class="ph-500x1000">project 3 detail / link</div>
+        </div>
 
     </div>
-    <!-- END NAV-->
+    <!-- END CONTAINER-PROJECT X3 -->
+
 
 </div>
 <!-- END CONTAINER MAIN -->
-
 </body>
 </html>
