--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- END NAV & FIXED-BORDER-BOTTOM  -->
 
     <!-- BEGIN LANDING -->
-    <div class="landing flex-center-center">
+    <div class="landing flex-cen-cen">
 
         <div class="ph-500x1000">landing</div>
 
@@ -49,14 +49,15 @@
     <!-- BEGIN CONTAINER-ABOUT -->
     <div class="container-about">
 
-        <div class="container-about-info flex-center-center">
+        <div class="container-about-info flex-cen-cen">
             <div class="ph-300x1000">about / info</div>
         </div>
 
-        <div class="container-about-project">
-            <div class="ph-300x240">project 1 preview</div>
-            <div class="ph-300x240">project 2 preview</div>
-            <div class="ph-300x240">project 3 preview</div>
+        <div class="container-about-project flex-sb-cen-wrap">
+            <div><img src="img/wp-std-3-sm.png" alt=""></div>
+            <div><img src="img/wp-std-3-sm.png" alt=""></div>
+            <div><img src="img/wp-std-3-sm.png" alt=""></div>
+            <div><img src="img/wp-std-3-sm.png" alt=""></div>
         </div>
 
     </div>
@@ -64,16 +65,20 @@
 
     <!-- BEGIN CONTAINER-PROJECTS X3 -->
     <div class="container-projects">
-        <div class="container-project flex-center-center">
-            <div class="ph-500x1000">project 1 detail / link</div>
+        <div class="container-project flex-cen-cen">
+            <div><img src="img/wp-std-2-md.png" alt=""></div>
         </div>
 
-        <div class="container-project flex-center-center ph-container-project">
-            <div class="ph-500x1000">project 2 detail / link</div>
+        <div class="container-project flex-cen-cen ph-container-project">
+            <div><img src="img/wp-std-2-md.png" alt=""></div>
         </div>
 
-        <div class="container-project flex-center-center">
-            <div class="ph-500x1000">project 3 detail / link</div>
+        <div class="container-project flex-cen-cen">
+            <div><img src="img/wp-std-2-md.png" alt=""></div>
+        </div>
+
+        <div class="container-project flex-cen-cen">
+            <div><img src="img/wp-std-2-md.png" alt=""></div>
         </div>
 
     </div>
