Converted nav from flex to grid

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="nav">
         <div class="nav-ul">
             <div id="nav-li-id-1-dev" class="nav-li nav-li-left">dev</div>
+            <div class="nav-li-space"></div>
             <div id="nav-li-id-2-portfolio" class="nav-li nav-li-right">portfolio</div>
             <div id="nav-li-id-3-contact" class="nav-li nav-li-right">contact</div>
             <div id="nav-li-id-3-about" class="nav-li nav-li-right">about</div>
@@ -53,11 +54,11 @@
             <div class="ph-300x1000">about / info</div>
         </div>
 
-        <div class="container-about-project flex-sb-cen-wrap">
-            <div><img src="img/wp-std-3-sm.png" alt=""></div>
-            <div><img src="img/wp-std-3-sm.png" alt=""></div>
-            <div><img src="img/wp-std-3-sm.png" alt=""></div>
-            <div><img src="img/wp-std-3-sm.png" alt=""></div>
+        <div class="container-about-project grid-col-4">
+            <div class="container-about-project-grid-1"><img src="img/wp-std-3-sm.png" alt=""></div>
+            <div class="container-about-project-grid-2"><img src="img/wp-std-3-sm.png" alt=""></div>
+            <div class="container-about-project-grid-3"><img src="img/wp-std-3-sm.png" alt=""></div>
+            <div class="container-about-project-grid-4"><img src="img/wp-std-3-sm.png" alt=""></div>
         </div>
 
     </div>
