--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <div class="ph-300x1000">about / info</div>
         </div>
 
-        <div class="container-about-project grid-col-4">
-            <div class="container-about-project-grid-1"><img src="img/wp-std-3-sm.png" alt=""></div>
-            <div class="container-about-project-grid-2"><img src="img/wp-std-3-sm.png" alt=""></div>
-            <div class="container-about-project-grid-3"><img src="img/wp-std-3-sm.png" alt=""></div>
-            <div class="container-about-project-grid-4"><img src="img/wp-std-3-sm.png" alt=""></div>
+        <div class="container-about-project img-test">
+            <div class="container-about-project-img img-1"></div>
+            <div class="container-about-project-img img-2"></div>
+            <div class="container-about-project-img img-3"></div>
+            <div class="container-about-project-img img-4"></div>
         </div>
 
     </div>
@@ -67,19 +67,19 @@
     <!-- BEGIN CONTAINER-PROJECTS X3 -->
     <div class="container-projects">
         <div class="container-project flex-cen-cen">
-            <div><img src="img/wp-std-2-md.png" alt=""></div>
+<!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
         </div>
 
         <div class="container-project flex-cen-cen ph-container-project">
-            <div><img src="img/wp-std-2-md.png" alt=""></div>
+<!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
         </div>
 
         <div class="container-project flex-cen-cen">
-            <div><img src="img/wp-std-2-md.png" alt=""></div>
+<!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
         </div>
 
         <div class="container-project flex-cen-cen">
-            <div><img src="img/wp-std-2-md.png" alt=""></div>
+<!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
         </div>
 
     </div>
