--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="ph-300x1000">about / info</div>
         </div>
 
-        <div class="container-about-project img-test">
+        <div class="container-about-projects">
             <div class="container-about-project-img img-1"></div>
             <div class="container-about-project-img img-2"></div>
             <div class="container-about-project-img img-3"></div>
@@ -65,21 +65,21 @@
     <!-- END CONTAINER-ABOUT -->
 
     <!-- BEGIN CONTAINER-PROJECTS X3 -->
-    <div class="container-projects">
-        <div class="container-project flex-cen-cen">
-<!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
+    <div class="container-projects flex-cen-cen">
+        <div class="container-project ph-500x1000">
+            <!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
         </div>
 
         <div class="container-project flex-cen-cen ph-container-project">
-<!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
+            <!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
         </div>
 
         <div class="container-project flex-cen-cen">
-<!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
+            <!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
         </div>
 
         <div class="container-project flex-cen-cen">
-<!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
+            <!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
         </div>
 
     </div>
