--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
             <div class="ph-300x1000">about / info</div>
         </div>
 
-        <div class="container-about-projects">
-            <div class="container-about-project-img img-1"></div>
-            <div class="container-about-project-img img-2"></div>
-            <div class="container-about-project-img img-3"></div>
-            <div class="container-about-project-img img-4"></div>
+        <div class="container-about-thumbs">
+            <div class="img img-1">1</div>
+            <div class="img img-2">2</div>
+            <div class="img img-3">3</div>
+            <div class="img img-4">4</div>
         </div>
+
+
 
     </div>
     <!-- END CONTAINER-ABOUT -->
