--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <!-- BEGIN NAV-->
     <div class="nav">
         <div class="nav-ul">
-            <div id="nav-li-id-1-dev" class="nav-li nav-li-left">dev</div>
+            <div id="nav-li-id-1-dev" class="nav-li nav-li-left"><a href="#">dev</a></div>
             <div class="nav-li-space"></div>
-            <div id="nav-li-id-2-portfolio" class="nav-li nav-li-right">portfolio</div>
-            <div id="nav-li-id-3-contact" class="nav-li nav-li-right">contact</div>
-            <div id="nav-li-id-3-about" class="nav-li nav-li-right">about</div>
+            <div id="nav-li-id-2-portfolio" class="nav-li nav-li-right"><a href="#">portfolio</a></div>
+            <div id="nav-li-id-3-contact" class="nav-li nav-li-right"><a href="#">contact</a></div>
+            <div id="nav-li-id-3-about" class="nav-li nav-li-right"><a href="#">about</a></div>
         </div>
     </div>
 
