--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
     <div class="container-about">
 
         <div class="container-about-info flex-cen-cen">
-            <div class="ph-300x1000">about / info</div>
+            <div class="ph-300x1000">about / info:
+            html
+            css
+            javascript
+            jquery</div>
         </div>
 
         <div class="container-about-thumbs">
@@ -69,19 +73,19 @@
     <!-- BEGIN CONTAINER-PROJECTS X3 -->
     <div class="container-projects flex-cen-cen">
         <div class="container-project ph-500x1000">
-            <!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
+
         </div>
 
-        <div class="container-project flex-cen-cen ph-container-project">
-            <!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
+        <div class="container-project ph-500x1000">
+
         </div>
 
-        <div class="container-project flex-cen-cen">
-            <!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
+        <div class="container-project ph-500x1000">
+
         </div>
 
-        <div class="container-project flex-cen-cen">
-            <!--            <div><img src="img/wp-std-2-md.png" alt=""></div>-->
+        <div class="container-project ph-500x1000">
+
         </div>
 
     </div>
