Working on modals

--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
     <div class="fixed-border-bottom"></div>
     <!-- END NAV & FIXED-BORDER-BOTTOM  -->
 
+    <!-- BEGIN NAV MODALS -->
+    <div id="container-nav-modal-1-dev" class="nav-dev-modal hidden">
+        modal: dev
+
+        modal: dev
+    </div>
+
+    <div id="container-nav-model-3-contact" class="nav-dev-modal hidden">
+        modal: contact
+    </div>
+    <!-- END NAV MODALS -->
+
     <!-- BEGIN LANDING -->
     <div class="landing flex-cen-cen">
 
@@ -52,10 +64,11 @@
 
         <div class="container-about-info flex-cen-cen">
             <div class="ph-300x1000">about / info:
-            html
-            css
-            javascript
-            jquery</div>
+                html
+                css
+                javascript
+                jquery
+            </div>
         </div>
 
         <div class="container-about-thumbs">
@@ -64,7 +77,6 @@
             <div class="img img-3">3</div>
             <div class="img img-4">4</div>
         </div>
-
 
 
     </div>
