Completed basic structure and style of dev button and modal

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/keyframes.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -27,7 +28,7 @@
     <!-- BEGIN NAV-->
     <div class="nav">
         <div class="nav-ul">
-            <div id="nav-li-id-1-dev" class="nav-li nav-li-left"><a href="#">dev</a></div>
+            <div id="nav-li-id-1-dev" class="nav-li nav-li-left"><a href="#">[jm@dev:]$</a><span class="dev-prompt"> _</span></div>
             <div class="nav-li-space"></div>
             <div id="nav-li-id-2-portfolio" class="nav-li nav-li-right"><a href="#">portfolio</a></div>
             <div id="nav-li-id-3-contact" class="nav-li nav-li-right"><a href="#">contact</a></div>
@@ -39,13 +40,23 @@
     <!-- END NAV & FIXED-BORDER-BOTTOM  -->
 
     <!-- BEGIN NAV MODALS -->
-    <div id="container-nav-modal-1-dev" class="nav-dev-modal hidden">
-        modal: dev
+    <div id="container-nav-modal-1-dev" class="nav-modal nav-modal-dev hidden">
+        <h5 id="nav-dev-close">-&nbsp;&nbsp;&#9634;&nbsp;&nbsp;X&nbsp;&nbsp;</h5>
 
-        modal: dev
+        <h6>[jm@dev:]$&nbsp;&nbsp;&nbsp;&nbspls &nbsp;&nbsp;-l</h6>
+        <ul>
+            <li>Portfolio Page (root link)</li>
+            <li>HTML (github index.html)</li>
+            <li>CSS  (github style.css)</li>
+            <li>JavaScript  (github main.js)</li>
+            <li>Other framework / language (github link)</li>
+            <li>Other framework / language (github link)</li>
+        </ul>
+
+
     </div>
 
-    <div id="container-nav-model-3-contact" class="nav-dev-modal hidden">
+    <div id="container-nav-model-3-contact" class="nav-modal hidden">
         modal: contact
     </div>
     <!-- END NAV MODALS -->
