--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
 
     <!-- BEGIN NAV MODALS -->
     <div id="container-nav-modal-1-dev" class="nav-modal nav-modal-dev hidden">
-        <h5 id="nav-dev-close">-&nbsp;&nbsp;&#9634;&nbsp;&nbsp;X&nbsp;&nbsp;</h5>
+        <div class="dev-modal-term-controls" id="nav-dev-close">-&nbsp;&nbsp;&#9634;&nbsp;&nbsp;X&nbsp;&nbsp;</div>
 
-        <h6>[jm@dev:]$&nbsp;&nbsp;&nbsp;&nbspls &nbsp;&nbsp;-l</h6>
+        <div class="dev-modal-prompt">[jm@dev:]$ <span class="dev-modal-input">ls -l</span></div>
         <ul>
-            <li>Portfolio Page (root link)</li>
-            <li>HTML (github index.html)</li>
-            <li>CSS  (github style.css)</li>
-            <li>JavaScript  (github main.js)</li>
-            <li>Other framework / language (github link)</li>
-            <li>Other framework / language (github link)</li>
+            <li><a href="https://github.com/jeffrey-maclarty/jeffrey-maclarty.github.io">this.root</a></li>
+            <li><a href="https://github.com/jeffrey-maclarty/jeffrey-maclarty.github.io/blob/main/index.html">index.html</a></li>
+            <li><a href="https://github.com/jeffrey-maclarty/jeffrey-maclarty.github.io/blob/main/css/style.css">style.css</a></li>
+            <li><a href="https://github.com/jeffrey-maclarty/jeffrey-maclarty.github.io/blob/main/js/main.js">main.js</a></li>
+            <li><a href="#">Other framework / language (github link)</a></li>
+            <li><a href="#">Other framework / language (github link)</a></li>
         </ul>
 
 
