Improved nav responsiveness on small

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id="container-nav-modal-1-dev" class="nav-modal nav-modal-dev hidden">
         <div class="dev-modal-term-controls" id="nav-dev-close">-&nbsp;&nbsp;&#9634;&nbsp;&nbsp;X&nbsp;&nbsp;</div>
 
-        <div class="dev-modal-prompt">[jm@dev:]$ <span class="dev-modal-input">ls -l</span></div>
+        <div class="dev-modal-prompt"><a href="https://github.com/jeffrey-maclarty" title="Git Overview">[jm@dev:]$ <span class="dev-modal-input">ls -l</span></a></div>
         <ul>
             <li><a href="https://github.com/jeffrey-maclarty/jeffrey-maclarty.github.io">this.root</a></li>
             <li><a href="https://github.com/jeffrey-maclarty/jeffrey-maclarty.github.io/blob/main/index.html">index.html</a></li>
