Refactored nav from grid to flexbox

--- a/index.html
+++ b/index.html
@@ -26,15 +26,27 @@
 <div class="container-main">
 
     <!-- BEGIN NAV-->
+
+
     <div class="nav">
-        <div class="nav-ul">
-            <div id="nav-li-id-1-dev" class="nav-li nav-li-left"><a href="#">[jm@dev:]$</a><span class="dev-prompt"> _</span></div>
-            <div class="nav-li-space"></div>
-            <div id="nav-li-id-2-portfolio" class="nav-li nav-li-right"><a href="#">portfolio</a></div>
-            <div id="nav-li-id-3-contact" class="nav-li nav-li-right"><a href="#">contact</a></div>
-            <div id="nav-li-id-3-about" class="nav-li nav-li-right"><a href="#">about</a></div>
-        </div>
+        <ul class="nav-ul">
+            <li id="nav-li-id-1-dev" class="nav-li"><a href="#">[jm@dev:]$</a><span class="dev-prompt"> _</span></li>
+            <li id="nav-li-id-2-portfolio" class="nav-li nav-li-right"><a href="#">portfolio</a></li>
+            <li id="nav-li-id-3-contact" class="nav-li nav-li-right"><a href="#">contact</a></li>
+            <li id="nav-li-id-4-about" class="nav-li nav-li-right"><a href="#">about</a></li>
+        </ul>
     </div>
+
+
+<!--    <div class="nav">-->
+<!--        <div class="nav-ul">-->
+<!--            <div id="nav-li-id-1-dev" class="nav-li nav-li-left"><a href="#">[jm@dev:]$</a><span class="dev-prompt"> _</span></div>-->
+<!--            <div class="nav-li-space"></div>-->
+<!--            <div id="nav-li-id-2-portfolio" class="nav-li nav-li-right"><a href="#">portfolio</a></div>-->
+<!--            <div id="nav-li-id-3-contact" class="nav-li nav-li-right"><a href="#">contact</a></div>-->
+<!--            <div id="nav-li-id-3-about" class="nav-li nav-li-right"><a href="#">about</a></div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <div class="fixed-border-bottom"></div>
     <!-- END NAV & FIXED-BORDER-BOTTOM  -->
