Added resume to nav

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <div class="nav">
         <ul class="nav-ul">
             <li id="nav-li-id-1-dev" class="nav-li"><a href="#">[jm@dev:]$</a><span class="dev-prompt"> _</span></li>
-            <li id="nav-li-id-2-portfolio" class="nav-li nav-li-right"><a href="#">portfolio</a></li>
-            <li id="nav-li-id-3-contact" class="nav-li nav-li-right"><a href="#">contact</a></li>
-            <li id="nav-li-id-4-about" class="nav-li nav-li-right"><a href="#">about</a></li>
+            <li id="nav-li-id-2-resume" class="nav-li nav-li-right"><a href="#">resume</a></li>
+            <li id="nav-li-id-3-portfolio" class="nav-li nav-li-right"><a href="#">portfolio</a></li>
+            <li id="nav-li-id-4-contact" class="nav-li nav-li-right"><a href="#">contact</a></li>
+            <li id="nav-li-id-5-about" class="nav-li nav-li-right"><a href="#">about</a></li>
         </ul>
     </div>
 
